# clerk-sdk-python

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  ci.yml
clerk/: __init__.py  client.py  clients.py  errors.py  sessions.py  types.py  users.py  verification.py
tests/: conftest.py
